📱 🐛 Update: Fixing main page responsiveness

--- a/FYProject1/Views/Home/Index.cshtml
+++ b/FYProject1/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
     <div class="row">
         <!--style="margin-top:61px">-->
 
-        <div class="col-lg-12 col-md-8">
+        <div class="col-lg-12">
             <a href="@Url.Action("SuperDeal","Product")" class="text-capitalize text-center" style="text-decoration:none">
                 <div class="adbarmainpage">
                     Super DEAL <i class="glyphicon glyphicon-gift"></i> CLICK NOW !
