✨👍👨‍💼 Add: Live Messaging Feature (powered by 🦜tawk.to)

--- a/FYProject1/Views/Home/ProductDetail.cshtml
+++ b/FYProject1/Views/Home/ProductDetail.cshtml
@@ -308,5 +308,14 @@
     <script src="~/Scripts/blazy.min.js"></script>
     <script type="text/javascript">
         var bLazy = new Blazy();
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5c5ae1fb7cf662208c944ffe/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
 }
