--- a/FYProject1/Views/Cart/ViewCart.cshtml
+++ b/FYProject1/Views/Cart/ViewCart.cshtml
@@ -84,5 +84,15 @@
         setTimeout(() => {
             roar("<strong><u>Notice</u></strong>", "Demo Site For Testing Purpose Only<br/> Not Ready To Shop.", { confirmText: "Close" });
         }, 5000);
+
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5c5ae1fb7cf662208c944ffe/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
 }
