--- a/FYProject1/Views/RecoveryEmail/Index.cshtml
+++ b/FYProject1/Views/RecoveryEmail/Index.cshtml
@@ -19,21 +19,35 @@
             <br />
             @if (ViewBag.error != null)
             {
-            <a class="btn btn-danger" href="@Url.Action("Index", "RecoveryEmail")"><span class="glyphicon glyphicon-refresh"></span> RETRY</a>
-            <hr />
-            <div class="alert alert-danger">@ViewBag.error</div> 
+                <a class="btn btn-danger" href="@Url.Action("Index", "RecoveryEmail")"><span class="glyphicon glyphicon-refresh"></span> RETRY</a>
+                <hr />
+                <div class="alert alert-danger">@ViewBag.error</div>
             }
             else if (ViewBag.success != null)
             {
-            <a class="btn btn-success" href="@Url.Action("Login", "User")"><span class="glyphicon glyphicon-check"></span> Login</a>
-            <hr />
-            <div class="alert alert-success">@ViewBag.success</div>
+                <a class="btn btn-success" href="@Url.Action("Login", "User")"><span class="glyphicon glyphicon-check"></span> Login</a>
+                <hr />
+                <div class="alert alert-success">@ViewBag.success</div>
             }
             else
             {
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-send"></i> Send</button>
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-send"></i> Send</button>
             }
         </div>
 
     }
 </div>
+
+@section myScript{
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5c5ae1fb7cf662208c944ffe/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+}
